kyverno-networkpolicy-training/code/kyverno-ops/tag11/policy-repo/tests/image-hygiene/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Value
metadata:
  name: values
namespaceSelector:
- name: shop
  labels: {guard-lab: demo}
- name: sandbox
  labels: {team: sandbox}
